# File-system-handler-and-RAG-via-MCP

./: .gitignore  RAG_SETUP_GUIDE.md  README.md  mcp_server.py  pyproject.toml  quick_test.py  rag_helpers.py  test.py  test_rag_driver.py
tool_helpers/: file_search_helpers.py  rag_ingest_helpers.py  rag_retrieval_helpers.py
