[project]
name = "mcp-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.2",
    "chromadb>=0.5.0",
    "open-clip-torch>=2.0.0",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "nltk>=3.8.0",
    "Pillow>=8.0.0",
    "clip>=0.2.0",
    "pypdf2>=3.0.1",
]
